--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ charset-normalizer==3.1.0 ; python_version >= "3.11" and python_version < "4.0"
 click==8.1.3 ; python_version >= "3.11" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.11" and python_version < "4.0" and platform_system == "Windows"
 dnspython==2.3.0 ; python_version >= "3.11" and python_version < "4.0"
+emoji==2.2.0 ; python_version >= "3.11" and python_version < "4.0"
 fastapi==0.95.1 ; python_version >= "3.11" and python_version < "4.0"
 frozenlist==1.3.3 ; python_version >= "3.11" and python_version < "4.0"
 h11==0.14.0 ; python_version >= "3.11" and python_version < "4.0"
