--- a/.env_example
+++ b/.env_example
@@ -1,9 +1,9 @@
-mongo_user="voronezh"
+mongo_user="atoll"
 mongo_password=
 mongo_host=
 mongo_port=55000
 mongo_auth_db="admin"
-mongo_db_name="voronezh"
+mongo_db_name="atoll"
 
 mailru_login=
 mailru_password=
