--- a/api.service
+++ b/api.service
@@ -3,9 +3,9 @@ Description=api
 After=network.target
 
 [Service]
-User=back
-WorkingDirectory=/home/back/voronezh
-ExecStart=/home/back/voronezh/.venv/bin/uvicorn voronezh.api.asgi:app --host 127.0.0.1 --port 8080 --workers 2
+User=atoll_back
+WorkingDirectory=/home/atoll_back/atoll_back
+ExecStart=/home/atoll_back/atoll_back/.venv/bin/uvicorn atoll_back.api.asgi:app --host 127.0.0.1 --port 8080 --workers 2
 RestartSec=5
 Restart=always
 
