--- a/tg_bot.service
+++ b/tg_bot.service
@@ -3,9 +3,9 @@ Description=tg_bot
 After=network.target
 
 [Service]
-User=back
-WorkingDirectory=/home/back/voronezh
-ExecStart=/home/back/voronezh/.venv/bin/python3 /home/back/voronezh/start_tg_bot.py
+User=atoll_back
+WorkingDirectory=/home/atoll/atoll
+ExecStart=/home/atoll_back/atoll_back/.venv/bin/python3 /home/atoll_back/atoll_back/start_tg_bot.py
 RestartSec=5
 Restart=always
 
