--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ vk-api = "^11.9.9"
 motor = "^3.1.2"
 uvicorn = "^0.21.1"
 emoji = "^2.2.0"
+pydantic = {extras = ["dotenv"], version = "^1.10.7"}
 
 
 [build-system]
