--- a/front.service
+++ b/front.service
@@ -5,7 +5,7 @@ After=network.target
 [Service]
 User=atoll_front
 WorkingDirectory=/home/atoll_front/atoll_front
-ExecStart=/home/atoll_front/run.sh
+ExecStart=npx next start -p 8081 --hostnamenpx next start -p 8081 --hostname 127.0.0.1
 RestartSec=5
 Restart=always
 
