--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ motor = "^3.1.2"
 uvicorn = "^0.21.1"
 emoji = "^2.2.0"
 pydantic = {extras = ["dotenv"], version = "^1.10.7"}
+schedule = "^1.2.0"
 
 
 [build-system]
