--- a/.env_example
+++ b/.env_example
@@ -1,19 +1,14 @@
-mongo_user="atoll"
-mongo_password=
 mongo_host=
-mongo_port=55000
-mongo_auth_db="admin"
-mongo_db_name="atoll"
+mongo_port=
+mongo_db_name=
+mongo_user=
+mongo_password=
+mongo_auth_db=
+
+tg_bot_token=
+vk_bot_token=
 
 mailru_login=
 mailru_password=
 mailru_server="smtp.mail.ru"
 mailru_port=465
-
-tg_bot_token=
-
-vk_bot_token=
-
-mode=dev
-
-emulate_mail_sending=False
